--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <a href="#contact" class="btn btn--stroke full-width">Work With Me</a>
                 </div>
                 <div class="column large-half tab-full" data-aos="fade-up">
-                    <a href="images/ENYI GLORIA PROFESSIONAL CV.docx" download="ENYI GLORIA'S CV" class="btn btn--primary full-width">Download CV</a>
+                    <a href="images/ENYI GLORIA PROFESSIONAL CV.pdf" download="ENYI GLORIA'S CV" class="btn btn--primary full-width">Download CV</a>
                 </div>
             </div>
 
