--- a/index.html
+++ b/index.html
@@ -465,28 +465,28 @@
                     </div>
                 </div> <!-- end masonry__brick -->
 
-                <!--<div class="masonry__brick" data-aos="fade-up">
+                <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-shutterbug.jpg" class="thumb-link" title="Grow Green" data-size="1050x700">
-                                <img src="images/portfolio/shutterbug.jpg" 
-                                     srcset="images/portfolio/shutterbug.jpg 1x, images/portfolio/shutterbug@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/Metav.png" class="thumb-link" title="Grow Green" data-size="1050x700">
+                                <img src="images/portfolio/Metaverse.png" 
+                                     srcset="images/portfolio/Metaverse.png" alt="">
                             </a>
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://gloria2807.github.io/React-Metaverse-Site/" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
-                                Shutterbug
+                                Metaverse
                             </h4>
                             <p class="item-folio__cat">
                                 Branding
                             </p>
                         </div>
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>An immersive landing page for a metaverse concept, built with ReactJS and TailwindCSS. Sleek animations and a modern UI bring futuristic themes to life while staying responsive.</p>
                         </div>
                     </div>
-                </div>--> <!-- end masonry__brick -->
+                </div> <!-- end masonry__brick -->
 
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
