--- a/index.html
+++ b/index.html
@@ -468,9 +468,9 @@
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/Metav.png" class="thumb-link" title="Grow Green" data-size="1050x700">
-                                <img src="images/portfolio/Metaverse.png" 
-                                     srcset="images/portfolio/Metaverse.png" alt="">
+                            <a href="images/portfolio/gallery/Metaverse.png" class="thumb-link" title="Grow Green" data-size="1050x700">
+                                <img src="images/portfolio/gallery/Metav.png" 
+                                     srcset="images/portfolio/gallery/Metav.png" alt="">
                             </a>
                             <a href="https://gloria2807.github.io/React-Metaverse-Site/" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
@@ -513,29 +513,29 @@
                     </div>
                 </div> <!-- end masonry__brick -->
         
-                <!--<div class="masonry__brick" data-aos="fade-up">
+                <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
                             
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-fuji.jpg" class="thumb-link" title="Palmeira" data-size="1050x700">
-                                <img src="images/portfolio/fuji.jpg"
-                                     srcset="images/portfolio/fuji.jpg 1x, images/portfolio/fuji@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/ecomm.png" class="thumb-link" title="Palmeira" data-size="1050x700">
+                                <img src="images/portfolio/gallery/faq.png"
+                                     srcset="images/portfolio/gallery/faq.png 1x, images/portfolio/fuji@2x.jpg 2x" alt="">
                             </a>
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://gloria2807.github.io/React-Ecommerce-Site/" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
-                                Fuji
+                                Coca Cola
                             </h4>
                             <p class="item-folio__cat">
-                                Web Design
+                                Ecommerce
                             </p>
                         </div>
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>A React-based platform for listing and managing inventory. With a clean, responsive and smooth interface for the best experience.</p>
                         </div>
                     </div>
-                </div>--> <!-- end masonry__brick -->
+                </div> <!-- end masonry__brick -->
 
             </div> <!-- end masonry -->
 
