--- a/index.html
+++ b/index.html
@@ -468,9 +468,9 @@
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/Metaverse.png" class="thumb-link" title="Grow Green" data-size="1050x700">
-                                <img src="images/portfolio/gallery/Metav.png" 
-                                     srcset="images/portfolio/gallery/Metav.png" alt="">
+                            <a href="images/portfolio/gallery/Metav.png" class="thumb-link" title="Metaverse" data-size="1050x700">
+                                <img src="images/portfolio/gallery/Metaverse.png" 
+                                     srcset="images/portfolio/gallery/Metaverse.png" alt="">
                             </a>
                             <a href="https://gloria2807.github.io/React-Metaverse-Site/" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
@@ -517,9 +517,9 @@
                     <div class="item-folio">
                             
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/ecomm.png" class="thumb-link" title="Palmeira" data-size="1050x700">
-                                <img src="images/portfolio/gallery/faq.png"
-                                     srcset="images/portfolio/gallery/faq.png 1x, images/portfolio/fuji@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/faq.png" class="thumb-link" title="Ecommerce" data-size="1050x700">
+                                <img src="images/portfolio/ecomm.png"
+                                     srcset="images/portfolio/ecomm.png 1x" alt="">
                             </a>
                             <a href="https://gloria2807.github.io/React-Ecommerce-Site/" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
