--- a/index.html
+++ b/index.html
@@ -402,10 +402,10 @@
     
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
-                                Cornerstone Yardsale
+                                Yardsale
                             </h4>
                             <p class="item-folio__cat">
-                                Web Design
+                                Ecommerce
                             </p>
                         </div>
     
