--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 <div class="item-service__content">
                     <h4 class="item-title">Custom Website Development</h4>
                     <p>
-                    Tailored websites built from scratch using clean HTML, CSS, and Javascrippt; designed to 
+                    Tailored websites built from scratch using <b>ReactJs and Tailwind Css</b>; designed to 
                     meet your brand's unique goals and deliver a seamless user experience across all devices.
                     </p>
                 </div>
