--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             <div class="column large-full">
                 <h2 class="section-heading section-heading--centerbottom">Project Spotlight</h2>
                 <p class="section-desc">
-                    Here’s a glimpse of what I’ve been building lately. Take a look.
+                    Take a look at what I’ve built; from earlier works to recent creations.
                 </p>
             </div>
         </div> <!-- end heading-block -->
