--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
         </div>
 
         <div class="row contact-main" data-aos="fade-up">
-            <div class="column large-full">
+            <div class="column w-screen">
                 <p class="contact-email">
                     <a href="mailto:nkemaconam@gmail.com">nkemaconam@gmail.com</a>
                 </p>
